<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fontsize"
        android:title="字体大小"
        >
        <menu>
            <group>
                <item
                    android:id="@+id/fontsize_small"
                    android:title="@string/fontsize_small"></item>
                <item
                    android:id="@+id/fontsize_middle"
                    android:title="@string/fontsize_middle"></item>
                <item
                    android:id="@+id/fontsize_big"
                    android:title="@string/fontsize_big"></item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/common_menu"
        android:title="@string/common_menu"
        >
    </item>
    <item
        android:id="@+id/fontcolor"
        android:title="@string/fontcolor"
        >
        <menu>
            <group>
                <item
                    android:id="@+id/fontcolor_red"
                    android:title="@string/fontcolor_red"
                    ></item>
                <item
                    android:id="@+id/fontcolor_black"
                    android:title="@string/fontcolor_black"
                    ></item>
            </group>
        </menu>
    </item>
</menu>