<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <Button
        android:id="@+id/btn_toLinearLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_toPage_mylistview"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginTop="70dp"
        />
    <Button
        android:id="@+id/btn_toMyDialog"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_toPage_MyDialog"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_below="@id/btn_toLinearLayout"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/btn_show_menu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_toPage_showmenu"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_below="@id/btn_toMyDialog"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/btn_action_mode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_toPage_ActionMode"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_below="@id/btn_show_menu"
        android:layout_marginTop="50dp"
        />
</RelativeLayout>